# MCP-Server-with-LangGraph-Ollama-Streamlit

./: .gitignore  README.md  pyproject.toml
planner/: graph.py  main.py
planner/Local Servers/: calendar_server.py  expenses_server.py  weather_server.py
